<!-- res/values/strings.xml -->
<resources>
    <string name="app_name">KentekenCheck</string>
    <string name="title_home">Zoek Kentekens</string>
    <string name="title_dashboard">Mijn Kentekens</string>
    <string name="title_notifications">Meldingen</string>
    <string name="description">Omschrijving</string>
    <string name="select_date">Selecteer Datum</string>
    <string name="add_maintenance">Onderhoud Toevoegen</string>
    <string name="kenteken">Kenteken</string>
    <string name="merk">Merk</string>
    <string name="model">Model</string>
    <string name="kleur">Kleur</string>
    <string name="bouwjaar">Bouwjaar</string>
    <string name="nieuwprijs">Nieuwprijs</string>
    <string name="voertuig_lengte">Voertuig Lengte</string>
    <string name="voertuig_breedte">Voertuig Breedte</string>
    <string name="voertuig_hoogte">Voertuig Hoogte</string>
    <string name="massa_rijklaar">Massa Rijklaar</string>
    <string name="toegestane_max_massa_voertuig">Toegestane max. massa voertuig</string>
    <string name="maximale_laadvermogen">Maximale laadvermogen</string>
    <string name="aanhanger_ongeremd">Aanhanger ongeremd</string>
    <string name="aanhanger_geremd">Aanhanger geremd</string>
    <string name="vervaldatum_apk">Vervaldatum APK</string>
    <string name="wok_melding">WOK melding</string>
    <string name="datum_eerste_toelating">Datum eerste toelating</string>
    <string name="datum_eerste_tenaamstelling_in_nederland">Datum eerste tenaamstelling in Nederland</string>
    <string name="bruto_bpm">Bruto BPM</string>
    <string name="inrichting">Inrichting</string>
    <string name="aantal_zitplaatsen">Aantal zitplaatsen</string>
    <string name="wam_verzekerd">WAM verzekerd</string>
    <string name="aantal_deuren">Aantal deuren</string>
    <string name="aantal_wielen">Aantal wielen</string>
    <string name="plaats_chassisnummer">Plaats chassisnummer</string>
    <string name="zuinigheidsclassificatie">Zuinigheidsclassificatie</string>
    <string name="aantal_cilinders">Aantal cilinders</string>
    <string name="cilinderinhoud">Cilinderinhoud</string>
    <string name="kenteken_cannot_be_empty">Kenteken mag niet leeg zijn</string>
    <string name="no_data_found">Geen gegevens gevonden voor het opgegeven kenteken</string>
    <string name="error_failed_to_parse_response">Fout: Kan de reactie niet verwerken</string>
    <string name="error">Fout</string>
    <string name="delete">Verwijderen</string>
    <string name="save">Opslaan</string>
    <string name="maintenance_history">Onderhoudsgeschiedenis</string>
    <string name="owned_for_x_days">Kenteken in je bezit voor %d dagen</string>
    <string name="apk_expires_in_x_days">APK verloopt over %d dagen</string>
    <string name="search">Zoeken</string>
    <string name="latest_kentekens">Nieuwste Kentekens</string>
    <string name="paste">Plakken</string>
    <string name="receive_notifications">Meldingen ontvangen</string>
    <string name="add_favorite">Toevoegen aan Favorieten</string>
    <string name="kenteken_added_to_favorites">Kenteken is toegevoegd aan favorieten</string>
    <string name="failed_to_create_pdf">PDF generatie is niet gelukt!</string>
    <string name="confirm">Weet je het zeker?</string>
    <string name="remove_favorite_confirmation">Weet je het zeker dat dit kenteken wilt verwijderen?</string>
    <string name="yes">Ja</string>
    <string name="kenteken_removed_from_favorites">Kenteken is verwijderd van favorieten</string>
    <string name="no">Nee</string>
    <string name="share">Delen</string>
    <string name="search_results">Kenteken Rapport</string>
    <string name="manage_car">Beheer Voertuig</string>
    <string name="car_logo">Voertuig Logo</string>
    <string name="car_data_saved">Voertuig gegevens opgeslagen</string>
    <string name="confirm_deletion">Weet je het zeker?</string>
    <string name="confirm_deletion_message">Weet je zeker dat je dit onderhoud wilt verwijderen?</string>
    <string name="maintenance_record_deleted">Onderhoud item verwijderd</string>
    <string name="opslaan">Opslaan</string>
    <string name="opmerking">Opmerking</string>
    <string name="hint_opmerking">Mijn Volkswagen Golf</string>
    <string name="aanschaf_datum">Aanschaf Datum:</string>
    <string name="selecteer_datum">Selecteer Datum</string>
    <string name="meldingen_ontvangen">Meldingen ontvangen</string>
    <string name="fill_all_fields">Vul alle velden in!</string>
    <string name="maintenance_record_added">Onderhoud item is toegevoegd</string>
    <string name="kenteken_check">Kenteken Check</string>
    <string name="qoute_description">De snelste weg naar voertuiginfo!</string>
    <string name="kenteken_hint">A-123-BC</string>
    <string name="no_kentekens_found">Geen kentekens gevonden.</string>
    <string name="no_notifications_found">Geen meldingen gevonden.</string>
    <string name="share_pdf_using">PDF delen</string>
    <string name="days_left">aantal dagen</string>
    <string name="owned_days">eigenaar aantal dagen</string>
    <string name="service_description">Grote Beurt + Remmen</string>
    <string name="add_kenteken">Kenteken Toevoegen</string>
    <string name="kenteken_check_result">Kenteken Check Resultaat</string>
    <string name="latest_added_kentekens">Laatst Toegevoegde Kentekens</string>
    <string name="vehicle_management">Voertuig Beheer</string>
</resources>
