<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/car_logo"
        android:src="@drawable/sharp_car_crash_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewKenteken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kenteken"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMerk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/merk"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textViewOpmerking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opmerking"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/hint_opmerking"
        android:hint="@string/hint_opmerking" />

    <TextView
        android:id="@+id/textViewAanschafDateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aanschaf_datum"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonAanschafDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecteer_datum" />

    <CheckBox
        android:id="@+id/checkBoxAlerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/meldingen_ontvangen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/maintenanceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maintenance_history"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/buttonAddMaintenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/add_maintenance"
            android:src="@drawable/twotone_add_24"
            app:tint="@color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maintenanceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/opslaan" />

</LinearLayout>
