<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreen_spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Logo ImageView -->
        <ImageView
            android:id="@+id/imageViewLogoTopBar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/car_logo"
            android:scaleType="centerCrop"
            android:src="@color/accent_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Top Bar Layout -->
        <LinearLayout
            android:id="@+id/topBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="horizontal"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogoTopBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Inner Logo ImageView -->
                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/car_logo"
                    android:src="@drawable/sharp_car_crash_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Title TextView -->
                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/search_results"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonShare"
                    app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Share Button -->
                <ImageButton
                    android:id="@+id/buttonShare"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/share"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/outline_share_24"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/background_light" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <!-- RecyclerView for results -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBarLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/buttonFavorite"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/primary"
            android:text="@string/add_favorite"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/buttonManageCar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/primary"
            android:text="@string/manage_car"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />

    </LinearLayout>

</FrameLayout>
